Fixed overlaping labels in timeline

--- a/app/styles/_socialtimeline.scss
+++ b/app/styles/_socialtimeline.scss
@@ -80,6 +80,8 @@ $vth: 500px;
 	width:1300px;
 	height:300px;
 	overlay: hidden;
+		position:absolute;
+
 }
 .tstories{
 	margin-top:70px;
